Height + flickering fix

--- a/src/components/app/details/cdDetails/cdDetail.scss
+++ b/src/components/app/details/cdDetails/cdDetail.scss
@@ -8,7 +8,7 @@
 .historical-diff__container {
     display: grid;
     grid-template-columns: 280px auto;
-    height: calc(100vh - 160px);
+    height: calc(100vh - 147px);
 }
 
 .deployment-diff__upper {
